--- a/Enquiry.UI/Enquiry/src/styles.css
+++ b/Enquiry.UI/Enquiry/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar {
+    border: 3px solid red !important;
+}
+.navbar-nav {
+    display: flex !important;
+    flex-direction: row !important;
+}
